Fix button small destop

--- a/assets/stylesheets/css/styles.css
+++ b/assets/stylesheets/css/styles.css
@@ -1889,6 +1889,11 @@ a,
 
 /* For screen min width 768px */
 @media screen and (min-width: 768px) {
+  .banner {
+    max-height: 620px;
+    height: calc(100vh - 130px - 158px); }
+    .banner iframe {
+      max-height: inherit; }
   .modal-dialog {
     max-width: 750px; }
   .section-dashboard {
@@ -1901,11 +1906,6 @@ a,
 
 /* For screen min width 992px */
 @media screen and (min-width: 992px) {
-  .banner {
-    min-height: 620px;
-    padding: 68px 0 0; }
-    .banner iframe {
-      max-height: inherit; }
   .alt-box {
     margin-left: calc((100vw - 930px) / (-2));
     margin-right: calc((100vw - 930px) / (-2));
@@ -1923,6 +1923,16 @@ a,
     margin-right: calc((100vw - 1110px) / (-2));
     padding-left: calc((100vw - 1110px) / (2));
     padding-right: calc((100vw - 1110px) / (2)); } }
+
+@media screen and (max-height: 800px) {
+  .section-dashboard {
+    margin-top: 50px; }
+  .payment-button {
+    margin-bottom: 70px; } }
+
+@media screen and (min-height: 768px) {
+  .banner iframe {
+    max-height: calc(100vh - 130px - 158px - 180px); } }
 
 @media screen and (max-width: 767px) {
   .xs-pr-5 {
