--- a/assets/stylesheets/scss/responsive.scss
+++ b/assets/stylesheets/scss/responsive.scss
@@ -6,137 +6,153 @@
 
 /* For screen min width 567px */
 @media screen and (min-width: 567px) {
-  .alt-box {
-    margin-left: calc((100vw - 510px) / (-2));
-    margin-right: calc((100vw - 510px) / (-2));
-    padding-left: calc((100vw - 510px) / (2));
-    padding-right: calc((100vw - 510px) / (2));
-  }
+    .alt-box {
+        margin-left: calc((100vw - 510px) / (-2));
+        margin-right: calc((100vw - 510px) / (-2));
+        padding-left: calc((100vw - 510px) / (2));
+        padding-right: calc((100vw - 510px) / (2));
+    }
 }
 
 /* For screen min width 768px */
 @media screen and (min-width: 768px) {
-  .modal-dialog {
-    max-width: 750px;
-  }
-  .section-dashboard {
-    margin: 100px 0 0;
-  }
-  .alt-box {
-    margin-left: calc((100vw - 690px) / (-2));
-    margin-right: calc((100vw - 690px) / (-2));
-    padding-left: calc((100vw - 690px) / (2));
-    padding-right: calc((100vw - 690px) / (2));
-  }
+    .banner {
+        max-height: 620px;
+        height: calc(100vh - 130px - 158px);
+        iframe {
+            max-height: inherit;
+        }
+    }
+    .modal-dialog {
+        max-width: 750px;
+    }
+    .section-dashboard {
+        margin: 100px 0 0;
+    }
+    .alt-box {
+        margin-left: calc((100vw - 690px) / (-2));
+        margin-right: calc((100vw - 690px) / (-2));
+        padding-left: calc((100vw - 690px) / (2));
+        padding-right: calc((100vw - 690px) / (2));
+    }
 }
 
 /* For screen min width 992px */
 @media screen and (min-width: 992px) {
-  .banner {
-    min-height: 620px;
-    padding: 68px 0 0;
-
-    iframe {
-      max-height: inherit;
+    .alt-box {
+        margin-left: calc((100vw - 930px) / (-2));
+        margin-right: calc((100vw - 930px) / (-2));
+        padding-left: calc((100vw - 930px) / (2));
+        padding-right: calc((100vw - 930px) / (2));
     }
-  }
-  .alt-box {
-    margin-left: calc((100vw - 930px) / (-2));
-    margin-right: calc((100vw - 930px) / (-2));
-    padding-left: calc((100vw - 930px) / (2));
-    padding-right: calc((100vw - 930px) / (2));
-  }
-  .tab-content{
-    padding: 25px 65px;
-  }
+    .tab-content {
+        padding: 25px 65px;
+    }
 }
 
 /* For screen min width 1200px */
 @media screen and (min-width: 1200px) {
-  .modal-dialog {
-    margin: 252px auto;
-  }
-  .alt-box {
-    margin-left: calc((100vw - 1110px) / (-2));
-    margin-right: calc((100vw - 1110px) / (-2));
-    padding-left: calc((100vw - 1110px) / (2));
-    padding-right: calc((100vw - 1110px) / (2));
-  }
+    .modal-dialog {
+        margin: 252px auto;
+    }
+    .alt-box {
+        margin-left: calc((100vw - 1110px) / (-2));
+        margin-right: calc((100vw - 1110px) / (-2));
+        padding-left: calc((100vw - 1110px) / (2));
+        padding-right: calc((100vw - 1110px) / (2));
+    }
+}
+
+@media screen and (max-height: 800px) {
+    .section-dashboard {
+        margin-top: 50px;
+    }
+    .payment-button {
+        margin-bottom: 70px;
+    }
+}
+
+@media screen and (min-height: 768px) {
+    .banner {
+        iframe {
+            max-height: calc(100vh - 130px - 158px - 180px);
+        }
+    }
 }
 
 @media screen and (max-width: 767px) {
-  .xs-pr-5 {
-    padding-right: 80px;
-  }
-  .menu-user {
-    > a {
-      > span {
-        display: none;
-      }
+    .xs-pr-5 {
+        padding-right: 80px;
     }
-  }
-  .nav-inner {
-    h1 {
-      font-size: 18px;
-    }
-
     .menu-user {
-      right: 10px;
-
-      .dgt-button {
-        i {
-          margin-right: 0;
+        > a {
+            > span {
+                display: none;
+            }
         }
-      }
     }
+    .nav-inner {
+        h1 {
+            font-size: 18px;
+        }
 
-    .price {
-      left: 10px;
+        .menu-user {
+            right: 10px;
 
-      span {
-        min-width: 60px;
-        font-size: 18px;
-      }
-    }
-  }
-  .button-arrow {
-    font-size: 24px;
-    height: 50px;
-    min-width: 160px;
+            .dgt-button {
+                i {
+                    margin-right: 0;
+                }
+            }
+        }
 
-    &:after {
-      bottom: 0;
+        .price {
+            left: 10px;
+
+            span {
+                min-width: 60px;
+                font-size: 18px;
+            }
+        }
     }
-  }
-  .coupon-code {
-    .form-control {
-      max-width: 100%;
+    .button-arrow {
+        font-size: 24px;
+        height: 50px;
+        min-width: 160px;
+
+        &:after {
+            bottom: 0;
+        }
     }
-  }
-  .payment {
-    .title {
-      font-size: 16px;
-      padding: 0 10px;
+    .coupon-code {
+        .form-control {
+            max-width: 100%;
+        }
     }
-  }
-  .payment-button {
-    .dgt-button{
-      width: 300px;
+    .payment {
+        .title {
+            font-size: 16px;
+            padding: 0 10px;
+        }
     }
-  }
-  .header-right {
-    position: relative;
-    @include css3-compatible("transform", none);
-    top: inherit;
-    right: inherit;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: center;
-  }
-  .profile-info {
-    label{
-      min-width: inherit;
-      margin-right: 15px;
+    .payment-button {
+        .dgt-button {
+            width: 300px;
+        }
     }
-  }
+    .header-right {
+        position: relative;
+        @include css3-compatible("transform", none);
+        top: inherit;
+        right: inherit;
+        margin-bottom: 50px;
+        display: flex;
+        justify-content: center;
+    }
+    .profile-info {
+        label {
+            min-width: inherit;
+            margin-right: 15px;
+        }
+    }
 }
